--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="insituprofiling" basedir="." default="retrieve" xmlns:ivy="antlib:org.apache.ivy.ant">
+<project name="codesparks-core" basedir="." default="retrieve" xmlns:ivy="antlib:org.apache.ivy.ant">
 
     <!-- Ivy -->
 
