--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,14 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="resources.dir" value="resources"/>
 
+    <condition property="is-windows">
+        <os family="windows"/>
+    </condition>
+
+    <condition property="is-linux">
+        <os family="unix"/>
+    </condition>
+
     <!-- Ivy -->
 
     <property name="ivy.install.version" value="2.4.0"/>
@@ -41,18 +49,31 @@
         <ivy:retrieve/> <!-- Includes resolve -->
     </target>
     
-    <!-- Libs --> 
-    
-    <property name="idea.version" value="2020.3"/>
-    <property name="jdk.home.intellij_idea"
-              value="C:/Program Files/JetBrains/IntelliJ IDEA Community Edition ${idea.version}"/>
-    
-    <path id="libs">
-        <fileset dir="${lib.dir}" includes="**/*.jar"/>
-        <fileset dir="${jdk.home.intellij_idea}/lib" includes="**/*.jar"/>
-        <fileset dir="${jdk.home.intellij_idea}/plugins/java" includes="**/*.jar"/> <!-- Although it compiles without these dependencies, it is required for, e.g. the class 'PsiClass' which is contained in the IntelliJ Plugin Development's internal 'Java Plugin'. So don't remove it!!! -->
-    </path>
-    
+    <!-- Libs -->
+
+    <property name="idea.version.windows" value="2020.3"/>
+    <property name="idea.version.linux" value="203.5981.155"/>
+<!--    <property name="jdk.home.intellij_idea" value=""/>-->
+
+    <target name="intellij-path-linux" if="is-linux">
+        <property name="jdk.home.intellij_idea"
+                  value="/opt/idea-IC-${idea.version.linux}"/>
+    </target>
+
+    <target name="intellij-path-windows" if="is-windows">
+        <property name="jdk.home.intellij_idea"
+                  value="C:/Program Files/JetBrains/IntelliJ IDEA Community Edition ${idea.version.windows}"/>
+    </target>
+
+    <target name="def-libs" depends="intellij-path-linux, intellij-path-windows, retrieve">
+<!--        <echo message="${jdk.home.intellij_idea}"/>-->
+        <path id="libs">
+            <fileset dir="${lib.dir}" includes="**/*.jar"/>
+            <fileset dir="${jdk.home.intellij_idea}/lib" includes="**/*.jar"/>
+            <fileset dir="${jdk.home.intellij_idea}/plugins/java" includes="**/*.jar"/> <!-- Although it compiles without these dependencies, it is required for, e.g. the class 'PsiClass' which is contained in the IntelliJ Plugin Development's internal 'Java Plugin'. So don't remove it!!! -->
+        </path>
+    </target>
+
     <!-- Cleanup -->
     
     <available file="${classes.dir}" type="dir" property="classes.dir.exists"/>
@@ -66,13 +87,13 @@
     
     <!-- Compilation -->
         
-    <target name="compile" depends="clean-classes, retrieve">
+    <target name="compile" depends="clean-classes, def-libs">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" includeantruntime="false">
             <classpath>
                 <path refid="libs"/>
             </classpath>
-            <compilerarg line="-Xlint:unchecked"/>
+            <compilerarg line="-encoding UTF-8 -source 11 -target 11 -Xlint:unchecked"/>
         </javac>
     </target>
 
