--- a/ivy.xml
+++ b/ivy.xml
@@ -4,5 +4,6 @@
         <dependency org="org.jdom" name="jdom2" rev="2.0.6" transitive="false"/>
         <dependency org="org.jgrapht" name="jgrapht-core" rev="1.3.1" transitive="false"/>
         <dependency org="org.jgrapht" name="jgrapht-io" rev="1.3.1" transitive="false"/>
+        <dependency org="com.google.guava" name="guava" rev="30.1-jre" transitive="false"/>
     </dependencies>
 </ivy-module>
