--- a/ivy.xml
+++ b/ivy.xml
@@ -5,5 +5,15 @@
         <dependency org="org.jgrapht" name="jgrapht-core" rev="1.3.1" transitive="false"/>
         <dependency org="org.jgrapht" name="jgrapht-io" rev="1.3.1" transitive="false"/>
         <dependency org="com.google.guava" name="guava" rev="30.1-jre" transitive="false"/>
+<!--
+        <dependency org="org.nd4j" name="nd4j-api" rev="1.0.0-beta7" transitive="true"/>
+        <dependency org="org.nd4j" name="nd4j-common" rev="1.0.0-beta7" transitive="true"/>
+        <dependency org="org.nd4j" name="nd4j-native" rev="1.0.0-beta7" transitive="true"/>
+        <dependency org="org.deeplearning4j" name="deeplearning4j-common" rev="1.0.0-beta7" transitive="false"/>
+        <dependency org="org.nd4j" name="nd4j-native-platform" rev="1.0.0-beta7" transitive="true"/>
+        <dependency org="org.bytedeco" name="javacpp" rev="1.5.3" transitive="false"/>
+        <dependency org="org.deeplearning4j" name="nearestneighbor-core" rev="1.0.0-beta7" transitive="false"/>
+-->
+
     </dependencies>
 </ivy-module>
