--- a/build.xml
+++ b/build.xml
@@ -69,7 +69,8 @@
         <!--        <echo message="${jdk.home.intellij_idea}"/>-->
         <path id="libs">
             <fileset dir="${lib.dir}" includes="*.jar"/>
-            <fileset dir="${jdk.home.intellij_idea}/lib" includes="**/*.jar"/>
+            <fileset dir="${jdk.home.intellij_idea}/lib" includes="**/*.jar"
+                     excludes="kotlin-stdlib-jdk8.jar,ant/lib/ant.jar"/>
             <fileset dir="${jdk.home.intellij_idea}/plugins/java"
                      includes="**/*.jar"/> <!-- Although it compiles without these dependencies, it is required for, e.g. the class 'PsiClass' which is contained in the IntelliJ Plugin Development's internal 'Java Plugin'. So don't remove it!!! -->
         </path>
@@ -181,6 +182,7 @@
                 <fileset dir="${test.classes.dir}">
                     <include name="de/unitrier/st/codesparks/core/**/*Test*.class"/>
                     <exclude name="de/unitrier/st/codesparks/core/**/*TestUtil*.class"/>
+                    <exclude name="de/unitrier/st/codesparks/core/**/ThreadClusterSilhouetteTest$1.class"/>
                 </fileset>
             </batchtest>
         </junit>
