--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,7 @@
     <!-- Libs -->
 
     <property name="idea.version.windows" value="2021.2.1"/>
-    <property name="idea.version.linux" value="212.4746.92"/>
+    <property name="idea.version.linux" value="212.5080.55"/>
     <!--    <property name="jdk.home.intellij_idea" value=""/>-->
 
     <target name="intellij-path-linux" if="is-linux">
@@ -213,8 +213,10 @@
             <batchtest fork="yes">
                 <fileset dir="${test.classes.dir}">
                     <include name="de/unitrier/st/codesparks/core/**/*Test*.class"/>
+                    <!-- -->
                     <exclude name="de/unitrier/st/codesparks/core/**/*de.unitrier.st.codesparks.jpt.stacksampling.TestUtil*.class"/>
                     <exclude name="de/unitrier/st/codesparks/core/**/ThreadClusterSilhouetteTest$1.class"/>
+                    <exclude name="de/unitrier/st/codesparks/core/**/ArtifactTrieTestUtil.class"/>
                 </fileset>
             </batchtest>
         </junit>
