--- a/build.xml
+++ b/build.xml
@@ -9,12 +9,21 @@
     <property name="classes.dir" value="${build.dir}/classes/main"/>
     <property name="resources.dir" value="resources"/>
 
+    <condition property="is-mac">
+        <os family="mac"/>
+    </condition>
+
     <condition property="is-windows">
         <os family="windows"/>
     </condition>
 
     <condition property="is-linux">
-        <os family="unix"/>
+        <and>
+            <os family="unix"/>
+            <not>
+                <os family="mac"/>
+            </not>
+        </and>
     </condition>
 
     <!-- Ivy -->
@@ -53,7 +62,13 @@
 
     <property name="idea.version.windows" value="2021.2.2"/>
     <property name="idea.version.linux" value="212.5080.55"/>
+    <property name="idea.version.mac" value="212.5284.40"/>
     <!--    <property name="jdk.home.intellij_idea" value=""/>-->
+
+    <target name="intellij-path-mac" if="is-mac">
+        <property name="jdk.home.intellij_idea"
+                  value="/Applications/IntelliJ IDEA CE.app/Contents"/>
+    </target>
 
     <target name="intellij-path-linux" if="is-linux">
         <property name="jdk.home.intellij_idea"
@@ -65,7 +80,7 @@
                   value="C:/Program Files/JetBrains/IntelliJ IDEA Community Edition ${idea.version.windows}"/>
     </target>
 
-    <target name="def-libs" depends="intellij-path-linux, intellij-path-windows, retrieve">
+    <target name="def-libs" depends="intellij-path-linux, intellij-path-windows, intellij-path-mac, retrieve">
         <!--        <echo message="${jdk.home.intellij_idea}"/>-->
         <path id="libs">
             <fileset dir="${lib.dir}" includes="*.jar"/>
@@ -90,6 +105,13 @@
     <!-- Compilation -->
 
     <target name="compile" depends="clean-classes, def-libs, kotlin-init" unless="compilation-executed">
+        <echo message="${jdk.home.intellij_idea}"/>
+        <echo message="OS Name is:         ${os.name}" />
+        <echo message="OS Architecture is: ${os.arch}" />
+        <echo message="OS Version is:      ${os.version}" />
+        <echo message="${is-mac}"/>
+        <echo message="${is-linux}"/>
+        <echo message="${is-windows}"/>
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" includeantruntime="false">
             <classpath>
