--- a/build.xml
+++ b/build.xml
@@ -117,7 +117,7 @@
             <classpath>
                 <path refid="libs"/>
             </classpath>
-            <compilerarg line="-encoding UTF-8 -source 11 -target 11 -Xlint:unchecked"/>
+            <compilerarg line="-encoding UTF-8 -source 11 -target 11 -Xlint:-unchecked"/>
             <withKotlin/>
         </javac>
         <property name="compilation-executed" value="true"/>
