--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,7 @@
             <classpath>
                 <path refid="libs"/>
             </classpath>
-            <compilerarg line="-encoding UTF-8 -source 11 --system ${env.JAVA_HOME} -target 11 -Xlint:-unchecked"/>
+            <compilerarg line="-encoding UTF-8 -source 11 --system &quot;${env.JAVA_HOME}&quot; -target 11 -Xlint:-unchecked"/>
             <withKotlin/>
         </javac>
         <property name="compilation-executed" value="true"/>
