--- a/build.xml
+++ b/build.xml
@@ -84,7 +84,7 @@
         <path id="libs">
             <fileset dir="${lib.dir}" includes="*.jar"/>
             <fileset dir="${jdk.home.intellij_idea}/lib" includes="**/*.jar"
-                     excludes="kotlin-stdlib-jdk8.jar,kotlin-reflect-*,ant/lib/ant.jar"/>
+                     excludes="kotlin-stdlib-jdk8.jar,kotlin-reflect-*,ant/lib/ant.jar,3rd-party-rt.jar"/>
             <fileset dir="${jdk.home.intellij_idea}/plugins/java"
                      includes="**/*.jar"/> <!-- Although it compiles without these dependencies, it is required for, e.g. the class 'PsiClass' which is contained in the IntelliJ Plugin Development's internal 'Java Plugin'. So don't remove it!!! -->
         </path>
