CodeSparks Logger does not not setup any more and is placed in the same toolwindow as the artifact overview, artifact detail view each artifact in own tab

--- a/resources/codesparks-strings.properties
+++ b/resources/codesparks-strings.properties
@@ -5,9 +5,9 @@ codesparks.settings.useractivitylogging.enable.border.title=Enable/Disable User 
 codesparks.settings.visualization.thread.title=Thread Visualizations
 codesparks.settings.visualization.thread.enable=Enable Thread Visualizations
 codesparks.settings.visualization.thread.enable.border.title=Enable/Disable Thread Visualizations
-codesparks.logger.view.displayname=CodeSparks Log
-codesparks.ui.artifactoverview.displayname=CodeSparks Artifact Overview
-codesparks.ui.artifactpopup.displayname=CodeSparks Artifact Popup
+codesparks.logger.view.displayname=Log
+codesparks.ui.artifactoverview.displayname=Artifact Overview
+codesparks.ui.artifactpopup.displayname=Artifact Detail
 codesparks.ui.overview.button.apply.artifact.filter=Apply artifact filter
 codesparks.ui.overview.button.threads.togglecluster=Toggle cluster
 codesparks.ui.popup.button.apply.thread.filter=Apply thread filter
